Correct box structure with final spacing issue to still be resolved

--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
-li {
+ul {
   border: 1px solid black;
   list-style: none;
   width: 23em;
   height: 12em;
   float: left;
+  margin-right: 1em;
+  margin-top: 1em;
+  padding-top: 15px;
+  padding-left: 0;
+}
+
+
+.container {
+  border-style: none;
+  width: 100%;
 }
 
 img {
